Test Sandbox Project/src/objects/Customer_Order__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Order</relationshipLabel>
        <relationshipName>Customer_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Customer Order</relationshipLabel>
        <relationshipName>Customer_Order</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_Age__c</fullName>
        <inlineHelpText>Number of Passed Hours</inlineHelpText>
        <label>Order Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pemesanan sedang diproses</fullName>
                </value>
                <value>
                    <fullName>Pesanan telah dikirim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partial_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partial Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Customer Order</relationshipLabel>
        <relationshipName>Customer_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Customer Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COD-{000}</displayFormat>
        <label>Customer Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Order</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>